# sowork

./: .gitignore  README.md  dune-project  exec.sh  exec_2.sh  out.txt  outout.txt  sowork.opam
_build/: log
lib/: dune
src/: dune  ex1a.ml  ex1b.ml  ex2.ml  ex2_2.ml
test/: dune
tests/tests/T1/: .data.tcl.20120312200527  .data.tcl.20120312202941  .data.tcl.20120312203402  .data.tcl.20120312211844  input
tests/tests/T1A/: input  output
tests/tests/T2/: .data.tcl  .data.tcl.20120312200557  .data.tcl.20120312203007  .data.tcl.20120312203422  .data.tcl.20120312211904  .data.tcl.20180307202418  input
tests/tests/T3/: .data.tcl  .data.tcl.20180307202356  .data.tcl.20230325181530  input
